# Kord

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: agent.py
agent/tools/: __init__.py  check_session.py  extract_buckets.py  fetch_audio.py  match_scholarships.py  send_whatsapp.py  translate_audio.py
app/: handlers.py
app/routes/: webhook.py
app/services/: __init__.py  sarvam.py
data/: __init__.py  db.py  models.py  scholarships.json  supabase_schema.sql
kord/: extraction.py  ingestion.py  matcher.py  output.py  translation.py
routers/: webhook.py
scrapers/: __init__.py  base.py  buddy4study.py  egrantz.py  myscheme.py
services/: conversation.py  groq_llm.py  nlp.py  sarvam.py  twilio.py
tests/: test_data.py  test_match_scholarships.py  test_scrapers.py  test_services.py  test_webhook.py
