[project]
name = "kord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.1",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sarvamai>=0.1.25",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
]
